<resources>

    <string name="app_name">Xboot</string>
    <string name="menu_settings">Enter cLK menu</string>
    <string name="title_activity_main">Xboot</string><string name="title_activity_helper">Flashing kernel image to selected boot partition</string>
    <string name="button1">boot</string>
    <string name="button2">sboot</string>
    <string name="button3">tboot</string>
    <string name="button4">vboot</string>
    <string name="button5">wboot</string>
    <string name="button6">xboot</string>
    <string name="button7">yboot</string>
    <string name="button8">zboot</string>
    <string name="button9">flash</string><string name="menu_item_0">Info</string><string name="menu_item_1">Recovery</string>
    <string name="menu_item_2">Bootloader</string>
    <string name="menu_item_3">Soft reset</string><string name="menu_item_4" >Exit</string>
    <string name="textview1">FLASH AID-KIT: Flash Rom\'s kernel to partition</string><string name="textview2">BOOT MANAGER: Select reboot mode</string><color name="MyColor">#0F0F0F</color>
    
    <string name="Info">Boot Manager for Black cLK\n\nSimply select the boot partition*\nfrom which cLK will load the kernel**\nafter rebooting device.\n\n*Boot partition must exist in ptable.\n**Kernel must have been flashed\n to the selected boot partition</string>
    <string-array name="xBoot_array">
        <item >boot</item>
        <item >sboot</item>
        <item >tboot</item>
        <item >vboot</item>
        <item >wboot</item>
        <item >xboot</item>
        <item >yboot</item>
        <item >zboot</item>
    </string-array>
    
    
    <color name="White">#FFFFFF</color>
    
    
    

</resources>