<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/MyColor"     
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity" >

     	<TableRow
     	    android:id="@+id/tableRow1"
     	    android:layout_width="match_parent"
     	    android:layout_height="wrap_content"
     	    android:layout_weight="1" >
            
     	    <TextView
     	        android:id="@+id/textView2"
     	        android:layout_width="match_parent"
     	        android:layout_height="match_parent"
     	        android:text="@string/textview2"
     	        android:textAppearance="?android:attr/textAppearanceSmall"
     	        android:textColor="@color/White" />
     	    
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_boot"
                android:text="@string/button1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_sboot"
                android:text="@string/button2" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button3"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_tboot"
                android:text="@string/button3" />

            <Button
                android:id="@+id/button4"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_vboot"
                android:text="@string/button4" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button5"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_wboot"
                android:text="@string/button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_xboot"
                android:text="@string/button6" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button7"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_yboot"
                android:text="@string/button7" />

            <Button
                android:id="@+id/button8"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="reboot_to_zboot"
                android:text="@string/button8" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/textview1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/White" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <Button
                android:id="@+id/button9"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="flash"
                android:text="@string/button9" />

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            
        </TableRow>

    </TableLayout>
